--- a/www/templates/statistics.html
+++ b/www/templates/statistics.html
@@ -47,5 +47,54 @@
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save()">Save</button>
         <p>{{response}}</p>
+
+
+
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 2</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par2">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir2">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir2">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score2">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno2">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers2">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob2">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save2()">Save</button>
+        <p>{{response2}}</p>
     </ion-content>
 </ion-view>
