Hole as far  as 13 on js

--- a/www/templates/statistics.html
+++ b/www/templates/statistics.html
@@ -2,6 +2,9 @@
     <ion-content padding="true" class="has-header">
         <h1 id="statistics-heading2" style="color:#FEFEFE;text-align:center;">Statistics</h1>
         
+<!-- **************************************************************************************************************************************** -->
+
+        
 <!-- HOLE 1 -->
         <h2 id="statistics-heading3" style="color:#111AEF;">Hole 1</h2>
         <h3 id="statistics-heading4" style="color:#F4F4F4;">Par</h3>
@@ -49,6 +52,10 @@
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save()">Save</button>
         <p>{{response}}</p>
+
+
+<!-- **************************************************************************************************************************************** -->
+
 
 <!-- HOLE 2 -->
         <h2 id="statistics-heading3" style="color:#111AEF;">Hole 2</h2>
@@ -99,6 +106,11 @@
         <p>{{response2}}</p>
 
 
+
+<!-- **************************************************************************************************************************************** -->
+
+
+
 <!-- HOLE 3 -->
         <h2 id="statistics-heading3" style="color:#111AEF;">Hole 3</h2>
         <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
@@ -146,5 +158,289 @@
         </form>
         <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save3()">Save</button>
         <p>{{response3}}</p>
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- HOLE 4 -->
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 4</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par4">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir4">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir4">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score4">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno4">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers4">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob4">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save4()">Save</button>
+        <p>{{response4}}</p>
+<!-- **************************************************************************************************************************************** -->
+
+<!-- HOLE 5 -->
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 5</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par5">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir5">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir5">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score5">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno5">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers5">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob5">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save5()">Save</button>
+        <p>{{response5}}</p>
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- HOLE 6 -->
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 6</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par6">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir6">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir6">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score6">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno6">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers6">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob6">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save6()">Save</button>
+        <p>{{response6}}</p>
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- HOLE 7 -->
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 7</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par7">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir7">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir7">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score7">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno7">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers7">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob7">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save7()">Save</button>
+        <p>{{response7}}</p>
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- HOLE 8 -->
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 8</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par8">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir8">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir8">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score8">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno8">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers8">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob8">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save8()">Save</button>
+        <p>{{response8}}</p>
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- **************************************************************************************************************************************** -->
+
     </ion-content>
 </ion-view>
