HTML up to hole 13

--- a/www/templates/statistics.html
+++ b/www/templates/statistics.html
@@ -410,13 +410,258 @@
 
 <!-- **************************************************************************************************************************************** -->
 
-<!-- **************************************************************************************************************************************** -->
+<!-- HOLE 9 -->
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 9</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par9">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir9">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir9">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score9">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno9">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers9">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob9">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save9()">Save</button>
+        <p>{{response9}}</p>
+
 
 <!-- **************************************************************************************************************************************** -->
 
-<!-- **************************************************************************************************************************************** -->
+<!-- HOLE 10 -->
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 10</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par10">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir10">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir10">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score10">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno10">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers10">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob10">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save10()">Save</button>
+        <p>{{response10}}</p>
+
 
 <!-- **************************************************************************************************************************************** -->
+
+<!-- HOLE 11 -->
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 11</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par11">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir11">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir11">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score11">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno11">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers11">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob11">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save11()">Save</button>
+        <p>{{response11}}</p>
+
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- HOLE 12 -->
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 12</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par12">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir12">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir12">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score12">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno12">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers12">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob12">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save12()">Save</button>
+        <p>{{response12}}</p>
+
+
+<!-- **************************************************************************************************************************************** -->
+
+<!-- HOLE 13 -->
+        <h2 id="statistics-heading3" style="color:#111AEF;">Hole 13</h2>
+        <h3 id="statistics-6" style="color:#F4F4F4;">Par</h3>
+        <form class="list">
+            <label class="item item-input">
+                <span class="input-label" >Par (3,4 or 5)</span>
+                <input type="text" placeholder="" ng-model="details.Par13">
+            </label>
+            
+            <h3 id="statistics-5" style="color:#F4F4F4;">FIR</h3>
+            <label class="item item-input">
+                <span class="input-label">FIR</span>
+                <input type="text" placeholder="" ng-model="details.fir13">
+            </label>
+            </label>
+            <h3 id="statistics-4" style="color:#F4F4F4;">GIR</h3>
+            <label class="item item-input">
+                <span class="input-label">GIR</span>
+                <input type="text" placeholder="" ng-model="details.gir13">
+            </label>
+        </label>
+            <h3 id="statistics-3" style="color:#F4F4F4;">Score</h3>
+            <label class="item item-input">
+                <span class="input-label">Score</span>
+                <input type="text" placeholder="" ng-model="details.score13">
+            </label>
+    </label>
+            <h3 id="statistics-2" style="color:#F4F4F4;">Putts</h3>
+            <label class="item item-input">
+                <span class="input-label">Putts</span>
+                <input type="text" placeholder="" ng-model="details.puttsno13">
+            </label>
+</label>
+            <h3 id="statistics-1" style="color:#F4F4F4;">Bunkers Hit</h3>
+            <label class="item item-input">
+                <span class="input-label">Bunkers Hit</span>
+                <input type="text" placeholder="" ng-model="details.bunkers13">
+            </label>
+</label>
+            <h3 id="statistics-0" style="color:#F4F4F4;">OOB</h3>
+            <label class="item item-input">
+                <span class="input-label">OOB</span>
+                <input type="text" placeholder="" ng-model="details.oob13">
+            </label>
+        </form>
+        <button style="border-radius:50px 50px 50px 50px;" class="button button-balanced  button-block" data-ng-click="save13()">Save</button>
+        <p>{{response13}}</p>
+
 
 <!-- **************************************************************************************************************************************** -->
 
